productList, some improves, css, nameList initial, starRating component

--- a/src/components/Nav/nav.scss
+++ b/src/components/Nav/nav.scss
@@ -23,6 +23,12 @@
                         background-color: #111;
                     }
                 }
+
+                &.nav-bar-logout-button {
+                    position: absolute;
+                    right: 150px;                    
+                    margin: 11px;
+                }
             }
         }
     }
