--- a/src/pages/ProductList/productList.scss
+++ b/src/pages/ProductList/productList.scss
@@ -8,4 +8,10 @@
         width: 100%;
         align-self: flex-start;
     }
+    
+    .product-list-empty-message {
+        width: 100%;       
+        display: flex;
+        justify-content: center; 
+    }
 }
