--- a/src/pages/NameList/nameList.scss
+++ b/src/pages/NameList/nameList.scss
@@ -1,3 +1,51 @@
 .name-list-container {
-  
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .name-list-wrapper {
+        display: flex;
+        flex-direction: column;
+        margin-top: 200px;    
+
+        .name-list-title {
+            width: 100%;
+            margin: 20px;
+            display: flex;
+            justify-content: center;
+            font-size: 20px;
+            font-family: sans-serif;
+            font-weight: 700;
+            color: #973c3c;
+        }
+    
+        .name-list-inputs-container {
+            width: 100%;
+            display: flex;
+
+            button.counter-add-name {
+                margin-left: 10px;
+            }
+        }        
+
+        ul.name-list-names-container {
+            display: flex;
+            width: 100%;
+            margin-top: 20px;
+            list-style-type: none;
+            padding: 0;
+            flex-direction: column;
+
+            li.name-list-item {
+                display: flex;
+            }
+
+            span.name-list-remove {
+                font-weight: 600;
+                color: red;
+                cursor: pointer;
+                margin-left: 10px;
+            }
+        }
+    }
 }
