--- a/src/pages/ProductList/ProductDetail/productDetail.scss
+++ b/src/pages/ProductList/ProductDetail/productDetail.scss
@@ -1,4 +1,4 @@
-.container-product-detail {
+.product-detail-container {
     display: flex;
     align-items: center;
     margin: 200px 100px 0 100px;
@@ -10,13 +10,13 @@
         width: 20%;
     }
 
-    .container-name-prices {
+    .name-prices-container {
         display: flex;
         align-items: center;
         flex-direction: column;
         width: 80%;
 
-        .container-product-name-description {
+        .product-name-description-container {
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -38,7 +38,7 @@
             }
         }
 
-        .container-prices {
+        .prices-container {
             display: flex;
     
             .price-normal {
